--- a/Lab1_1.3/Views/Home/Index.cshtml
+++ b/Lab1_1.3/Views/Home/Index.cshtml
@@ -2,7 +2,48 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div>
+
+     <div  style="width: 100%; ">
+         <div id="chart1"  style="width: 50%; float: left; " ></div>
+         <div id="chart3"  style="width: 50%; float: right; "   ></div>
+     </div>
+    
+
+    @section scripts{
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script>
+        google.charts.load('current', { 'packages': ['corechart'] });
+        google.charts.setOnLoadCallback(drawChart1);
+        google.charts.setOnLoadCallback(drawChart3);
+            function drawChart1() {
+
+                $.get('/api/ChartType/JsonData', function(JsonData) {
+                    data = google.visualization.arrayToDataTable(JsonData, false);
+                    var option = {
+                        title: "Кількості страв кожного типу",
+                        width: 500,
+                        height: 400
+                    };
+                    chart = new google.visualization.ColumnChart(document.getElementById('chart1'));
+                    chart.draw(data, option);
+                })
+            }
+
+            function drawChart3() {
+
+                $.get('/api/ChartMenuCal/JsonData', function(JsonData) {
+                    data = google.visualization.arrayToDataTable(JsonData, false);
+                    var option = {
+                        title: "Кількості страв в меню",
+                        width: 500,
+                        height: 400
+                    };
+                    chart = new google.visualization.PieChart(document.getElementById('chart3'));
+                    chart.draw(data, option);
+                })
+            }
+
+        </script>
+    }
 </div>
