--- a/Lab1_1.3/Views/Ingredients/Create.cshtml
+++ b/Lab1_1.3/Views/Ingredients/Create.cshtml
@@ -1,12 +1,12 @@
-﻿@model DiningRoomWebApplication.Ingredient
+﻿@model DiningRoomWA.Ingredient
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Створення</h1>
 
-<h4>Ingredient</h4>
+<h4>Інгредієнту</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад до інгредієнтів</a>
 </div>
 
 @section Scripts {
