--- a/Lab1_1.3/Views/Ingredients/Delete.cshtml
+++ b/Lab1_1.3/Views/Ingredients/Delete.cshtml
@@ -1,14 +1,14 @@
-﻿@model DiningRoomWebApplication.Ingredient
+﻿@model DiningRoomWA.Ingredient
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Видалення інгредієнту</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Якщо ви видалите цей інгредієнт, його більше не буде. Пам'ять про нього зітреться з усіх сторінок історії...</h3>
 <div>
-    <h4>Ingredient</h4>
+    <h4>Інгредаєнт</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -21,7 +21,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Видалити" class="btn btn-danger" /> |
+        <a asp-action="Index">Назад</a>
     </form>
 </div>
