--- a/Lab1_1.3/Views/Menus/Edit.cshtml
+++ b/Lab1_1.3/Views/Menus/Edit.cshtml
@@ -1,12 +1,12 @@
-﻿@model DiningRoomWebApplication.Menu
+﻿@model DiningRoomWA.Menu
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Редагувати";
 }
 
-<h1>Edit</h1>
+<h1>Редагування</h1>
 
-<h4>Menu</h4>
+<h4>Меню (точніше його назви)</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -26,7 +26,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад до меню</a>
 </div>
 
 @section Scripts {
