--- a/Lab1_1.3/Views/Dishes/Create.cshtml
+++ b/Lab1_1.3/Views/Dishes/Create.cshtml
@@ -1,12 +1,12 @@
-﻿ @model DiningRoomWebApplication.Dish
+﻿@model DiningRoomWA.Dish
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create a new dish and add it to menu @ViewBag.MenuName </h1>
+<h1>Створення страви</h1>
 
-<h4>Dish</h4>
+<h4>(зовсім нової)</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,12 +28,9 @@
                 <span asp-validation-for="Notes" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
+                <label asp-for="TypeId" class="control-label"></label>
                 <select asp-for="TypeId" class ="form-control" asp-items="ViewBag.TypeId"></select>
             </div>
-
-            <input type="hidden" value="@ViewBag.MenuId" name="MenuId"/>
-
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -41,8 +38,8 @@
     </div>
 </div>
 
-<div>  
-    <a asp-action="Index" asp-route-id="@ViewBag.MenuId">Back to List</a>
+<div>
+    <a asp-action="Index">Назад до страв</a>
 </div>
 
 @section Scripts {
