--- a/Lab1_1.3/Views/Dishes/Delete.cshtml
+++ b/Lab1_1.3/Views/Dishes/Delete.cshtml
@@ -1,14 +1,14 @@
-﻿@model DiningRoomWebApplication.Dish
+﻿@model DiningRoomWA.Dish
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Видалити?????</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Ви ДІЙСНО хочете видалити цю страву???</h3>
 <div>
-    <h4>Dish</h4>
+    <h4>Оцю:</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -37,10 +37,9 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete" asp-route-id=@Model?.Id>
-        <input type="hidden" value="@ViewBag.MenuId" name="menuId"/>
+    <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index" asp-route-id="@ViewBag.MenuId">Back to List</a>
+        <input type="submit" value="Так, видалити цю страву" class="btn btn-danger" /> |
+        <a asp-action="Index">Повернутись до страв</a>
     </form>
 </div>
