--- a/Lab1_1.3/Views/Ingredients/Edit.cshtml
+++ b/Lab1_1.3/Views/Ingredients/Edit.cshtml
@@ -1,12 +1,12 @@
-﻿@model DiningRoomWebApplication.Ingredient
+﻿@model DiningRoomWA.Ingredient
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Редагування</h1>
 
-<h4>Ingredient</h4>
+<h4>Інгредієнт</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,14 +19,14 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Зберегти" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад до інгредієнтів</a>
 </div>
 
 @section Scripts {
