--- a/Lab1_1.3/Views/Ingredients/Index.cshtml
+++ b/Lab1_1.3/Views/Ingredients/Index.cshtml
@@ -1,35 +1,28 @@
-﻿@model IEnumerable<DiningRoomWebApplication.Ingredient>
+﻿@model IEnumerable<DiningRoomWA.Ingredient>
 
 @{
-    ViewData["Title"] = "Наші інгредієнти";
+    ViewData["Title"] = "Index";
 }
 
-<h1>Наші інгредієнти</h1>
+<h1>Інгредієнти</h1>
 
 <p>
+     @if (User.IsInRole("admin")) {
     <a asp-action="Create">Новий інгредієнт</a>
+     }
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
+
 @foreach (var item in Model) {
-        <tr>
-            <td>
+    <form asp-action="Details" asp-route-id="@item.Id">
+            <button class="normal">
                 @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-               <a asp-action="Edit" asp-route-id="@item.Id">Редагувати</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Розгорнути</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Видалити</a>
-            </td>
-        </tr>
+                <div style="float:right; z-index: 1">
+                     @if (User.IsInRole("admin")) {
+                        <a asp-action="Edit" asp-route-id="@item.Id">Редагувати</a>
+                         <span>|</span>
+                        <a asp-action="Delete" asp-route-id="@item.Id">Видалити</a>
+                     }
+                </div>
+            </button>
+    </form>     
 }
-    </tbody>
-</table>
