--- a/Lab1_1.3/Views/Menus/Delete.cshtml
+++ b/Lab1_1.3/Views/Menus/Delete.cshtml
@@ -1,20 +1,27 @@
-﻿@model DiningRoomWebApplication.Menu
+﻿@model DiningRoomWA.Menu
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Видалення";
 }
 
-<h1>Delete</h1>
+<h1>Видалення</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Видаляємо?</h3>
 <div>
-    <h4>Menu</h4>
+    <h4>Точно-точно видаляємо?</h4>
     <hr />
+    <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+    </dl>
     
-    
-    <form asp-action="Delete" asp-route-id=@Model?.Id>
+    <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Видалити" class="btn btn-danger" /> |
+        <a asp-action="Index">Назад до меню</a>
     </form>
 </div>
