--- a/Lab1_1.3/Views/Shared/_Layout.cshtml
+++ b/Lab1_1.3/Views/Shared/_Layout.cshtml
@@ -1,43 +1,74 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using DiningRoomWA.Models
+@using System.Security.Claims
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - DiningRoomWebApplication</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <title>@ViewData["Title"] - DiningRoomWA</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap_darkly.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/DiningRoomWebApplication.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/DiningRoomWA.styles.css" asp-append-version="true" />
+    <style>
+    </style>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DiningRoomWebApplication</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Їдальня</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" >
+@*                    <ul class="navbar-nav flex-grow-1">
+                    </ul>*@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Дім</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Menus" asp-action="Index">Меню</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Конфіденційність</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Dishes" asp-action="Index">Страви</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Menus" asp-action="">Меню</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ingredients" asp-action="Index">Інгредієнти</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="AllDishes" asp-action="">Страви</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Types" asp-action="">Типи</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Ingredients" asp-action="">Інгредієнти</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Types" asp-action="Index">Типи</a>
                         </li>
                     </ul>
+
+                    <ul class="navbar-nav flex-grow-1" style="position: absolute; right: 10px">
+                        <li class="nav-item" >
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Реєстрація</a>
+                        </li>
+                        <li class="nav-item" >
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Вхід</a>
+                        </li>
+
+                        @if (User.IsInRole("admin"))
+                        {
+                            <li class="nav-item" >
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Ролі</a>
+                            </li>
+                        }
+
+                        <li class="nav-item" >
+                            <a class="nav-link text-dark">@User.FindFirstValue(ClaimTypes.Name)</a>
+                        </li>
+
+                        <li class="nav-item" >
+                            <form method="post" asp-controller="Account" asp-action="Logout">
+                                <div>
+                                    <input class="nav-link text-dark" type="submit" value="Вийти" />
+                                </div>
+                            </form>
+                        </li>
+                    </ul>
+
                 </div>
             </div>
         </nav>
@@ -50,7 +81,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - DiningRoomWebApplication - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - DiningRoomWA - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
