--- a/Lab1_1.3/Views/Types/Create.cshtml
+++ b/Lab1_1.3/Views/Types/Create.cshtml
@@ -1,12 +1,12 @@
-﻿@model DiningRoomWebApplication.Type
+﻿@model DiningRoomWA.Type
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Створення</h1>
 
-<h4>Type</h4>
+<h4>Типу</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,14 +18,14 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Створити" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад то типів</a>
 </div>
 
 @section Scripts {
